# TwitterX-Fullstack

./: .gitattributes  README.md  db.sqlite3  pyproject.toml
.github/workflows/: build.yml
musker/: views.py
musker/templates/: base.html  home.html  profile.html  profile_list.html
social/: settings.py
