[tool.poetry]
name = "twitterx-fullstack"
version = "0.1.0"
description = ""
authors = ["Matheus Aveiro <Matheusaveirofagundes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
gitpython = "^3.1.43"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
